--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Below is a tentative calendar, which will be updated as we make progress in the 
 	<td>Week-I</td>
 	<td><a href="https://nbviewer.jupyter.org/github/sivaramambikasaran/2019_NLA/blob/master/Lectures/Lecture_1.ipynb">Lecture - 1</a></td>
 	<td><a href="https://nbviewer.jupyter.org/github/sivaramambikasaran/2019_NLA/blob/master/Lectures/Lecture_2.ipynb">Lecture - 2 </a></td>
-	<td></td>
+	<td>No class</td>
 	<td><a href="https://nbviewer.jupyter.org/github/sivaramambikasaran/2019_NLA/blob/master/Lectures/Lecture_3.ipynb">Lecture - 3 </a></td>
 	<td><a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_1/assign_1.pdf">Assign - 1 due August 10</a></td>
 <tr>
