--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Below is a tentative calendar, which will be updated as we make progress in the 
 	<td></td>
 	<td></td>
 	<td></td>
-	<td></td>
+	<td><a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_2/assign_2.pdf">Assign - 2 due August 17</a></td>
 
 <tr>
 <tr>
