--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Below is a tentative calendar, which will be updated as we make progress in the 
 	<td></td>
 	<td></td>
 	<td></td>
-	<td></td>
+	<td><a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_3/assign_3.pdf">Assign-3 due September 15</a></td>
 
 <tr>
 <tr>
