--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ Kandappan, Office hours: Tuesdays 2 PM to 4 PM @ Room 621, NAC
 </tbody>
 </table>
 
+<h3><font color="magenta">Gradebook</font></h3>
+<a href="https://docs.google.com/spreadsheets/d/1bTLMEavxMV4-FXemXtzM2VV1gDUx9-jXXKBBmxMU7PM/edit?usp=sharing">Grade sheet</a>
+
 <h3><font color="magenta">Assignments</font></h3>
 <ul>
 	<li>All assignments due on <font color=cyan>Saturdays before 5 PM</font>.</li>
