--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@ Kandappan, Office hours: Tuesdays 2 PM to 4 PM @ Room 621, NAC
 	<li>The grader will expect you to express your ideas clearly, legibly, and completely, often requiring complete English sentences rather than merely just a long string of equations or unconnected mathematical expressions. This means you could lose points for poorly written proofs or answers. Clear exposition is a crucial ingredient of technical communication. Clarity of thought and presentation is more important in mathematics & sciences than any other field. The only way to master exposition is by repeated practicing.</li>
 </ul>
 
+<br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_1/assign_1.pdf">Assign - 1 due August 10</a><br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_2/assign_2.pdf">Assign - 2 due August 17</a><br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_3/assign_3.pdf">Assign - 3 due September 15</a><br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_4/assign_4.pdf">Assign - 4 due September 28</a><br>
+<br>
+
 <a href="https://www.dropbox.com/request/DZ75cpewNqfsZAYsmSMY">LINK FOR ASSIGNMENT SUBMISSIONS</a>
 
 <h3><font color="magenta">Calendar</font></h3>
@@ -92,7 +99,7 @@ Below is a tentative calendar, which will be updated as we make progress in the 
 	<td><a href="https://nbviewer.jupyter.org/github/sivaramambikasaran/2019_NLA/blob/master/Lectures/Lecture_2.ipynb">Lecture - 2 </a></td>
 	<td>No class</td>
 	<td><a href="https://nbviewer.jupyter.org/github/sivaramambikasaran/2019_NLA/blob/master/Lectures/Lecture_3.ipynb">Lecture - 3 </a></td>
-	<td><a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_1/assign_1.pdf">Assign - 1 due August 10</a></td>
+	<td></td>
 <tr>
 
 <tr>
@@ -101,7 +108,7 @@ Below is a tentative calendar, which will be updated as we make progress in the 
 	<td></td>
 	<td></td>
 	<td></td>
-	<td><a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_2/assign_2.pdf">Assign - 2 due August 17</a></td>
+	<td></td>
 
 <tr>
 <tr>
@@ -137,7 +144,7 @@ Below is a tentative calendar, which will be updated as we make progress in the 
 	<td></td>
 	<td></td>
 	<td></td>
-	<td><a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_3/assign_3.pdf">Assign-3 due September 15</a></td>
+	<td></td>
 
 <tr>
 <tr>
