--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Kandappan, Office hours: Tuesdays 2 PM to 4 PM @ Room 621, NAC
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_2/assign_2.pdf">Assign - 2 due August 17</a><br>
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_3/assign_3.pdf">Assign - 3 due September 15</a><br>
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_4/assign_4.pdf">Assign - 4 due September 28</a><br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_4/assign_5.pdf">Assign - 5 due October 5</a><br>
 <br>
 
 <a href="https://www.dropbox.com/request/DZ75cpewNqfsZAYsmSMY">LINK FOR ASSIGNMENT SUBMISSIONS</a>
