--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ Kandappan, Office hours: Tuesdays 2 PM to 4 PM @ Room 621, NAC
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_4/assign_4.pdf">Assign - 4 due September 28</a><br>
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_5/assign_5.pdf">Assign - 5 due October 5</a><br>
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_6/assign_6.pdf">Assign - 6 due October 19</a><br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_7/assign_7.pdf">Assign - 7 due November 13</a><br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_8/assign_8.pdf">Assign - 8 due November 13</a><br>
 <br>
 
 <a href="https://www.dropbox.com/request/DZ75cpewNqfsZAYsmSMY">LINK FOR ASSIGNMENT SUBMISSIONS</a>
