--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ Kandappan, Office hours: Tuesdays 2 PM to 4 PM @ Room 621, NAC
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_6/assign_6.pdf">Assign - 6 due October 19</a><br>
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_7/assign_7.pdf">Assign - 7 due November 13</a><br>
 <a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Assignments/Assign_8/assign_8.pdf">Assign - 8 due November 13</a><br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Exams/Practice/NLA_final_practice_1.pdf">Practice Exam-I</a></br>
+<a href="https://github.com/sivaramambikasaran/2019_NLA/blob/master/Exams/Practice/NLA_final_practice_2.pdf">Practice Exam-II</a></br>
 <br>
 
 <a href="https://www.dropbox.com/request/DZ75cpewNqfsZAYsmSMY">LINK FOR ASSIGNMENT SUBMISSIONS</a>
